# xedu-client

./: .gitignore  Cargo.toml  FINAL_REPORT.md  PACKAGE_INSTRUCTIONS.md  README.md  TAURI_PACKAGE_SUMMARY.md  backend_api.py  create_launcher.py  demo_api.py  launch_jupyter.bat  package-lock.json  package.json  package_for_distribution.py  setup_tauri_bundle.md  tauri.conf.json  temp_browsefolder.txt  test_refactored.html  vite.config.js  web_app.py  快速开始.md  构建exe说明.md
.claude/: settings.local.json
jupyter-tauri-deploy/: README.md  launch_jupyter.bat
src/: app.html  index-new.html  index.html.backup  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: web_app.py
src-tauri/src/: lib.rs
src/backend/models/: config.py
src/backend/services/: jupyter_service.py
src/backend/utils/: logger.py
src/frontend/components/: ControlPanel.js  StatusBar.js
src/frontend/utils/: api.js  app.js  config.js  events.js  logger.js
src/styles/: main.css
test_project/: README.md
